# nonebot_plugin_epicfree

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
.github/workflows/: bulid.yml  publish-test.yml  publish.yml
nonebot_plugin_epicfree/: __init__.py  data_source.py
