[tool.poetry]
name = "nonebot_plugin_epicfree"
version = "0.1.0"
description = "A Epic free game info plugin for Nonebot2"
authors = ["monsterxcn <monsterxcn@gmail.com>"]
documentation = "https://github.com/monsterxcn/nonebot_plugin_epicfree#readme"
license = "MIT"
homepage = "https://github.com/monsterxcn/nonebot_plugin_epicfree"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "epic", "free"]

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = "^2.0.0.a1"
httpx = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"